syntax = "proto3";

option csharp_namespace = "SciDevHome.Server";

package DevHome;

service Greeter {
  // 客户端连接服务端 双向流
  rpc Connect(stream ConnectRequest) returns (stream ConnectResponse) {}

  rpc Register(ClientInfo) returns (RegisterResponse) {}


  rpc SendMessage(DevMessage) returns (DevMessage) {}
}

message DevMessage {
	string type = 1;
	string json = 2;
}

message RegisterResponse
{
	// 客户端id
	string clientId = 1;
}

message ConnectRequest {
  string message = 1;
  // 带入连接信息，如IP，名字等
  ClientInfo info = 2;
}

message ConnectResponse {
  string message = 1;
}

message ClientInfo {
  string ip = 1;
  string name = 2;
  string mac = 3;
}
